welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:-6: error: Missing closing brace `}' assumed here
try {
^countTeen:1: error: expected class or object definition
def estAdo(n:Int) : Boolean = {
^